# driftwatch

./: .gitignore  README.md  pyproject.toml
driftwatch/: age_reporter.py  alert_filter.py  cached_fetcher.py  checker.py  circuit_breaker.py  cli.py  config.py  diff_reporter.py  digest_cache.py  drift_age.py  drift_annotator.py  drift_baseline.py  drift_diff.py  drift_policy.py  drift_score.py  drift_summary_exporter.py  drift_suppression.py  fetcher.py  health.py  history.py  history_report.py  metrics.py  notifier.py  rate_limiter.py  reporter.py  retry.py  runner.py  scheduler.py  score_reporter.py  suppression_reporter.py  target_status.py  trend_analyzer.py  trend_reporter.py  watchdog.py  watchdog_reporter.py
tests/: test_age_reporter.py  test_alert_filter.py  test_cached_fetcher.py  test_checker.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_digest_cache.py  test_drift_age.py  test_drift_annotator.py  test_drift_baseline.py  test_drift_diff.py  test_drift_score.py  test_drift_summary_exporter.py  test_drift_suppression.py  test_fetcher.py  test_health.py  test_history.py  test_history_integration.py  test_history_report.py  test_metrics.py  test_notifier.py  test_rate_limiter.py  test_reporter.py  test_retry.py  test_runner.py  test_scheduler.py  test_score_reporter.py  test_target_status.py  test_trend_analyzer.py  test_watchdog.py
