[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "driftwatch"
version = "0.1.0"
description = "Daemon that monitors local config files against a remote source of truth and alerts on drift."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "respx>=0.21",
]

[project.scripts]
driftwatch = "driftwatch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["driftwatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["driftwatch"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
